Basic tcp listener

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fcoroutines-ts -stdlib=libc++")
 add_definitions(-DBOOST_ASIO_DISABLE_CONCEPTS)
 
 add_library(training-raft-objects OBJECT ${SOURCES} ${HEADERS})
-target_link_libraries(training-raft-objects ${CONAN_LIBS} ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable(training-raft ${MAIN_FILE} $<TARGET_OBJECTS:training-raft-objects>)
 target_compile_options(training-raft PRIVATE ${STRICT_OPTIONS})
-target_link_libraries(training-raft Threads::Threads)
+target_link_libraries(training-raft ${CONAN_LIBS} Threads::Threads)
